Add jSpecify node.dao package.