@@ -1,21 +1,21 @@
 /* ==================================================================
  * FilteringDatumDao.java - 15/03/2019 11:12:18 am
- * 
+ *
  * Copyright 2019 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -24,7 +24,6 @@ package net.solarnetwork.node.dao;
 
 import static net.solarnetwork.service.OptionalService.service;
 import java.time.Instant;
-import java.util.Collections;
 import java.util.List;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -35,7 +34,7 @@ import net.solarnetwork.service.OptionalService;
 
 /**
  * Delegating DAO for {@link NodeDatum} that applies filters before persisting.
- * 
+ *
  * @author matt
  * @version 1.0
  * @since 2.0
@@ -49,7 +48,7 @@ public class FilteringDatumDao implements DatumDao {
 
 	/**
 	 * Constructor.
-	 * 
+	 *
 	 * @param delegate
 	 *        the DAO to delegate to
 	 * @param filterService
@@ -66,6 +65,9 @@ public class FilteringDatumDao implements DatumDao {
 	public void storeDatum(NodeDatum datum) {
 		final DatumFilterService filter = service(filterService);
 		final DatumDao dao = service(delegate);
+		if ( dao == null ) {
+			return;
+		}
 		if ( datum != null && filter != null && datum.asSampleOperations() != null ) {
 			DatumSamplesOperations samples = filter.filter(datum, datum.asSampleOperations(), null);
 			if ( samples == null || samples.isEmpty() ) {
@@ -86,7 +88,7 @@ public class FilteringDatumDao implements DatumDao {
 	@Override
 	public List<NodeDatum> getDatumNotUploaded(String destination) {
 		final DatumDao dao = service(delegate);
-		return (dao != null ? dao.getDatumNotUploaded(destination) : Collections.emptyList());
+		return (dao != null ? dao.getDatumNotUploaded(destination) : List.of());
 	}
 
 	@Override
